// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toggle > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-3[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-2:hover {
  background-color: #d9dadd;
}

.emotion-2:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-2:focus-within,
.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-2[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-2:has(:checked) {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-2:has(:checked):hover {
  background-color: #792dd4;
}

.emotion-2:has(:checked):after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-2:has(:checked):focus-within,
.emotion-2:has(:checked):focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-2[data-disabled="true"]:has(:checked) {
  background: #e5dbfd;
}

.emotion-2[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-2[data-error="true"]:focus-within,
.emotion-2[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-error="true"]:has(:checked) {
  background-color: #e51963;
}

.emotion-2[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-2[data-error="true"][data-disabled="true"]:has(:checked) {
  background-color: #ffd3e3;
}

.emotion-4 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-4[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u4j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.125rem_xxsmall__toi52u21 styles_justifyContent_normal_xxsmall__toi52u5d"
      />
      <div
        class="emotion-2 emotion-3"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-invalid="false"
          class="emotion-4 emotion-5"
          id="«r0»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly label 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-3[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-2:hover {
  background-color: #d9dadd;
}

.emotion-2:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-2:focus-within,
.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-2[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-2:has(:checked) {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-2:has(:checked):hover {
  background-color: #792dd4;
}

.emotion-2:has(:checked):after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-2:has(:checked):focus-within,
.emotion-2:has(:checked):focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-2[data-disabled="true"]:has(:checked) {
  background: #e5dbfd;
}

.emotion-2[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-2[data-error="true"]:focus-within,
.emotion-2[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-error="true"]:has(:checked) {
  background-color: #e51963;
}

.emotion-2[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-2[data-error="true"][data-disabled="true"]:has(:checked) {
  background-color: #ffd3e3;
}

.emotion-4 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-4[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u4j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.125rem_xxsmall__toi52u21 styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_gap_0.5rem_xxsmall__x6hyh57"
          style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
        >
          <span
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          >
            This is a label
          </span>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-invalid="false"
          class="emotion-4 emotion-5"
          id="«rg»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly when checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-3[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-2:hover {
  background-color: #d9dadd;
}

.emotion-2:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-2:focus-within,
.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-2[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-2:has(:checked) {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-2:has(:checked):hover {
  background-color: #792dd4;
}

.emotion-2:has(:checked):after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-2:has(:checked):focus-within,
.emotion-2:has(:checked):focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-2[data-disabled="true"]:has(:checked) {
  background: #e5dbfd;
}

.emotion-2[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-2[data-error="true"]:focus-within,
.emotion-2[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-error="true"]:has(:checked) {
  background-color: #e51963;
}

.emotion-2[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-2[data-error="true"][data-disabled="true"]:has(:checked) {
  background-color: #ffd3e3;
}

.emotion-4 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-4[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u4j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.125rem_xxsmall__toi52u21 styles_justifyContent_normal_xxsmall__toi52u5d"
      />
      <div
        class="emotion-2 emotion-3"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-invalid="false"
          checked=""
          class="emotion-4 emotion-5"
          id="«r2»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly when disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-3[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-2:hover {
  background-color: #d9dadd;
}

.emotion-2:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-2:focus-within,
.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-2[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-2:has(:checked) {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-2:has(:checked):hover {
  background-color: #792dd4;
}

.emotion-2:has(:checked):after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-2:has(:checked):focus-within,
.emotion-2:has(:checked):focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-2[data-disabled="true"]:has(:checked) {
  background: #e5dbfd;
}

.emotion-2[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-2[data-error="true"]:focus-within,
.emotion-2[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-error="true"]:has(:checked) {
  background-color: #e51963;
}

.emotion-2[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-2[data-error="true"][data-disabled="true"]:has(:checked) {
  background-color: #ffd3e3;
}

.emotion-4 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-4[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="true"
      class="emotion-0 emotion-1"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u4j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.125rem_xxsmall__toi52u21 styles_justifyContent_normal_xxsmall__toi52u5d"
      />
      <div
        class="emotion-2 emotion-3"
        data-disabled="true"
        data-error="false"
      >
        <input
          aria-invalid="false"
          class="emotion-4 emotion-5"
          disabled=""
          id="«r4»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly when required with label 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-3[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-2:hover {
  background-color: #d9dadd;
}

.emotion-2:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-2:focus-within,
.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-2[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-2:has(:checked) {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-2:has(:checked):hover {
  background-color: #792dd4;
}

.emotion-2:has(:checked):after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-2:has(:checked):focus-within,
.emotion-2:has(:checked):focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-2[data-disabled="true"]:has(:checked) {
  background: #e5dbfd;
}

.emotion-2[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-2[data-error="true"]:focus-within,
.emotion-2[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-error="true"]:has(:checked) {
  background-color: #e51963;
}

.emotion-2[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-2[data-error="true"][data-disabled="true"]:has(:checked) {
  background-color: #ffd3e3;
}

.emotion-4 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-4[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u4j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.125rem_xxsmall__toi52u21 styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_gap_0.5rem_xxsmall__x6hyh57"
          style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
        >
          <span
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          >
            test
          </span>
          <sup
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
          >
            *
          </sup>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-invalid="false"
          class="emotion-4 emotion-5"
          id="«r6»"
          name="test"
          required=""
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly when required with label left 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0:active .emotion-3[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-2:hover {
  background-color: #d9dadd;
}

.emotion-2:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-2:focus-within,
.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-2[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-2:has(:checked) {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-2:has(:checked):hover {
  background-color: #792dd4;
}

.emotion-2:has(:checked):after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-2:has(:checked):focus-within,
.emotion-2:has(:checked):focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-2[data-disabled="true"]:has(:checked) {
  background: #e5dbfd;
}

.emotion-2[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-2[data-error="true"]:focus-within,
.emotion-2[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-error="true"]:has(:checked) {
  background-color: #e51963;
}

.emotion-2[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-2[data-error="true"][data-disabled="true"]:has(:checked) {
  background-color: #ffd3e3;
}

.emotion-4 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-4[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u4j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.125rem_xxsmall__toi52u21 styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_gap_0.5rem_xxsmall__x6hyh57"
          style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
        >
          <span
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          >
            test
          </span>
          <sup
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
          >
            *
          </sup>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-invalid="false"
          class="emotion-4 emotion-5"
          id="«ra»"
          name="test"
          required=""
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with complex label 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-3[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-2:hover {
  background-color: #d9dadd;
}

.emotion-2:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-2:focus-within,
.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-2[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-2:has(:checked) {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-2:has(:checked):hover {
  background-color: #792dd4;
}

.emotion-2:has(:checked):after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-2:has(:checked):focus-within,
.emotion-2:has(:checked):focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-2[data-disabled="true"]:has(:checked) {
  background: #e5dbfd;
}

.emotion-2[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-2[data-error="true"]:focus-within,
.emotion-2[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-error="true"]:has(:checked) {
  background-color: #e51963;
}

.emotion-2[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-2[data-error="true"][data-disabled="true"]:has(:checked) {
  background-color: #ffd3e3;
}

.emotion-4 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-4[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u4j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.125rem_xxsmall__toi52u21 styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_gap_0.5rem_xxsmall__x6hyh57"
          style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
        >
          <span>
            Custom label rendered
          </span>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-invalid="false"
          class="emotion-4 emotion-5"
          id="«rs»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with custom labels on right 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-3[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-2:hover {
  background-color: #d9dadd;
}

.emotion-2:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-2:focus-within,
.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-2[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-2:has(:checked) {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-2:has(:checked):hover {
  background-color: #792dd4;
}

.emotion-2:has(:checked):after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-2:has(:checked):focus-within,
.emotion-2:has(:checked):focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-2[data-disabled="true"]:has(:checked) {
  background: #e5dbfd;
}

.emotion-2[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-2[data-error="true"]:focus-within,
.emotion-2[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-error="true"]:has(:checked) {
  background-color: #e51963;
}

.emotion-2[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-2[data-error="true"][data-disabled="true"]:has(:checked) {
  background-color: #ffd3e3;
}

.emotion-4 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-4[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u4j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.125rem_xxsmall__toi52u21 styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_gap_0.5rem_xxsmall__x6hyh57"
          style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
        >
          <span
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          >
            This is a label
          </span>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-invalid="false"
          class="emotion-4 emotion-5"
          id="«rp»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with error 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-3[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-3[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-2:hover {
  background-color: #d9dadd;
}

.emotion-2:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-2:focus-within,
.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-2[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-2:has(:checked) {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-2:has(:checked):hover {
  background-color: #792dd4;
}

.emotion-2:has(:checked):after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-2:has(:checked):focus-within,
.emotion-2:has(:checked):focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-2[data-disabled="true"]:has(:checked) {
  background: #e5dbfd;
}

.emotion-2[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-2[data-error="true"]:focus-within,
.emotion-2[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-error="true"]:has(:checked) {
  background-color: #e51963;
}

.emotion-2[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-2[data-error="true"][data-disabled="true"]:has(:checked) {
  background-color: #ffd3e3;
}

.emotion-2 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-2:hover {
  background-color: #d9dadd;
}

.emotion-2:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-2:focus-within,
.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-2[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-2:has(:checked) {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-2:has(:checked):hover {
  background-color: #792dd4;
}

.emotion-2:has(:checked):after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-2:has(:checked):focus-within,
.emotion-2:has(:checked):focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-2[data-disabled="true"]:has(:checked) {
  background: #e5dbfd;
}

.emotion-2[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-2[data-error="true"]:focus-within,
.emotion-2[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-error="true"]:has(:checked) {
  background-color: #e51963;
}

.emotion-2[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-2[data-error="true"][data-disabled="true"]:has(:checked) {
  background-color: #ffd3e3;
}

.emotion-4 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-4[disabled] {
  cursor: not-allowed;
}

.emotion-4 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-4[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u4j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.125rem_xxsmall__toi52u21 styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_gap_0.5rem_xxsmall__x6hyh57"
          style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
        >
          <span
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          >
            This is a label
          </span>
        </div>
        <p
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
        >
          error text
        </p>
      </div>
      <div
        class="emotion-2 emotion-3"
        data-disabled="false"
        data-error="true"
      >
        <input
          aria-invalid="true"
          class="emotion-4 emotion-5"
          id="«r15»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with helper 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-3[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-3[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-2:hover {
  background-color: #d9dadd;
}

.emotion-2:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-2:focus-within,
.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-2[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-2:has(:checked) {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-2:has(:checked):hover {
  background-color: #792dd4;
}

.emotion-2:has(:checked):after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-2:has(:checked):focus-within,
.emotion-2:has(:checked):focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-2[data-disabled="true"]:has(:checked) {
  background: #e5dbfd;
}

.emotion-2[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-2[data-error="true"]:focus-within,
.emotion-2[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-error="true"]:has(:checked) {
  background-color: #e51963;
}

.emotion-2[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-2[data-error="true"][data-disabled="true"]:has(:checked) {
  background-color: #ffd3e3;
}

.emotion-2 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-2:hover {
  background-color: #d9dadd;
}

.emotion-2:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-2:focus-within,
.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-2[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-2:has(:checked) {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-2:has(:checked):hover {
  background-color: #792dd4;
}

.emotion-2:has(:checked):after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-2:has(:checked):focus-within,
.emotion-2:has(:checked):focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-2[data-disabled="true"]:has(:checked) {
  background: #e5dbfd;
}

.emotion-2[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-2[data-error="true"]:focus-within,
.emotion-2[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-error="true"]:has(:checked) {
  background-color: #e51963;
}

.emotion-2[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-2[data-error="true"][data-disabled="true"]:has(:checked) {
  background-color: #ffd3e3;
}

.emotion-4 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-4[disabled] {
  cursor: not-allowed;
}

.emotion-4 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-4[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u4j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.125rem_xxsmall__toi52u21 styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_gap_0.5rem_xxsmall__x6hyh57"
          style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
        >
          <span
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          >
            This is a label
          </span>
        </div>
        <p
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_weak__m4c9owl style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
        >
          This is a helper
        </p>
      </div>
      <div
        class="emotion-2 emotion-3"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-invalid="false"
          class="emotion-4 emotion-5"
          id="«r11»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with labels on left 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-0:active .emotion-3[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-2:hover {
  background-color: #d9dadd;
}

.emotion-2:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-2:focus-within,
.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-2[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-2:has(:checked) {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-2:has(:checked):hover {
  background-color: #792dd4;
}

.emotion-2:has(:checked):after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-2:has(:checked):focus-within,
.emotion-2:has(:checked):focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-2[data-disabled="true"]:has(:checked) {
  background: #e5dbfd;
}

.emotion-2[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-2[data-error="true"]:focus-within,
.emotion-2[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-error="true"]:has(:checked) {
  background-color: #e51963;
}

.emotion-2[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-2[data-error="true"][data-disabled="true"]:has(:checked) {
  background-color: #ffd3e3;
}

.emotion-4 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-4[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u4j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.125rem_xxsmall__toi52u21 styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_gap_0.5rem_xxsmall__x6hyh57"
          style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
        >
          <span
            class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          >
            This is a label
          </span>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-invalid="false"
          class="emotion-4 emotion-5"
          id="«rm»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with non default size 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-3[data-disabled='false']:after {
  width: calc(0.75rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 2.5rem;
  height: 1.25rem;
}

.emotion-2:hover {
  background-color: #d9dadd;
}

.emotion-2:after {
  content: "";
  position: absolute;
  top: calc(1.25rem / 2 - 0.75rem / 2);
  left: 5px;
  width: 0.75rem;
  height: 0.75rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-2:focus-within,
.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-2[data-disabled="false"]:active:after {
  width: calc(0.75rem * 1.3775);
}

.emotion-2:has(:checked) {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-2:has(:checked):hover {
  background-color: #792dd4;
}

.emotion-2:has(:checked):after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-2:has(:checked):focus-within,
.emotion-2:has(:checked):focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-2[data-disabled="true"]:has(:checked) {
  background: #e5dbfd;
}

.emotion-2[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-2[data-error="true"]:focus-within,
.emotion-2[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-error="true"]:has(:checked) {
  background-color: #e51963;
}

.emotion-2[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-2[data-error="true"][data-disabled="true"]:has(:checked) {
  background-color: #ffd3e3;
}

.emotion-4 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-4[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="emotion-0 emotion-1"
    >
      <div
        class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u4j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.125rem_xxsmall__toi52u21 styles_justifyContent_normal_xxsmall__toi52u5d"
      />
      <div
        class="emotion-2 emotion-3"
        data-disabled="false"
        data-error="false"
      >
        <input
          aria-invalid="false"
          class="emotion-4 emotion-5"
          id="«re»"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with tooltip 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0:active .emotion-3[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-2 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-2:hover {
  background-color: #d9dadd;
}

.emotion-2:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-2:focus-within,
.emotion-2:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-2[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-2:has(:checked) {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-2:has(:checked):hover {
  background-color: #792dd4;
}

.emotion-2:has(:checked):after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-2:has(:checked):focus-within,
.emotion-2:has(:checked):focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-2[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-2[data-disabled="true"]:has(:checked) {
  background: #e5dbfd;
}

.emotion-2[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-2[data-error="true"]:focus-within,
.emotion-2[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[data-error="true"]:has(:checked) {
  background-color: #e51963;
}

.emotion-2[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-2[data-error="true"][data-disabled="true"]:has(:checked) {
  background-color: #ffd3e3;
}

.emotion-4 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-4[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="«rk»"
      aria-describedby="«rk»"
      class="styles__w40vpo9"
      tabindex="0"
    >
      <label
        aria-disabled="false"
        class="emotion-0 emotion-1"
      >
        <div
          class="styles__toi52u0 styles_alignItems_baseline_xxsmall__toi52u4j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.125rem_xxsmall__toi52u21 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <div
            class="styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_gap_0.5rem_xxsmall__x6hyh57"
            style="--_3mg8xe0: auto 1fr; --_3mg8xe1: auto 1fr; --_3mg8xe2: auto 1fr; --_3mg8xe3: auto 1fr; --_3mg8xe4: auto 1fr; --_3mg8xe5: auto 1fr;"
          >
            <span
              class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              This is a label
            </span>
          </div>
        </div>
        <div
          class="emotion-2 emotion-3"
          data-disabled="false"
          data-error="false"
        >
          <input
            aria-invalid="false"
            class="emotion-4 emotion-5"
            id="«rj»"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;
